wporg-plugins-2024: Fix overflow in plugin cards
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@13658 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins-2024/client/components/_plugin-card.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins-2024/client/components/_plugin-card.scss
@@ -49,7 +49,6 @@
 		span {
 			display: inline-block;
 			overflow: hidden;
-			white-space: nowrap;
 			line-height: var( --wp--preset--font-size--normal );
 			color: var( --wp--preset--color--charcoal-4 );
 
